# Settings

./: .gitignore  LICENSE  README.md
VSCode/Boost.CMake/: CMakeLists.txt  main.cpp
VSCode/GLFW.CMake/: CMakeLists.txt  main.cpp
VSCode/QML.CMake/: .gitignore  CMakeLists.txt  main.cpp
VSCode/QML.CMake/res/: main.qml
VSCode/Qt.CMake/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
